// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createScene(routes, { scene, basename }) actions.notFound(params): 13 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "/base-name",
    "hash": "",
    "key": "345678",
    "pathname": "/not-found-foo",
    "search": "",
    "state": Object {},
    "url": "/not-found-foo",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params): 13 - history_index 1`] = `1`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params): 13 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/not-found-foo",
        "search": "",
        "state": Object {},
        "url": "/not-found-foo",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/not-found-foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "SCENE",
    "search": "",
    "status": 404,
    "url": "/base-name/not-found-foo",
  },
  "notFoundUrl": undefined,
  "params": Object {
    "foo": "bar",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/NOT_FOUND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params): 13 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params): 13 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params): 13 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/not-found-foo",
        "search": "",
        "state": Object {},
        "url": "/not-found-foo",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/not-found-foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "SCENE/NOT_FOUND",
    "universal": false,
    "url": "/base-name/not-found-foo",
  },
  "title": "SCENE/NOT_FOUND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params): 13 - title 1`] = `"SCENE/NOT_FOUND"`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params, path): 14 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "/base-name",
    "hash": "",
    "key": "345678",
    "pathname": "/cat",
    "search": "",
    "state": Object {},
    "url": "/cat",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params, path): 14 - history_index 1`] = `1`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params, path): 14 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/cat",
        "search": "",
        "state": Object {},
        "url": "/cat",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/cat",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "SCENE",
    "search": "",
    "status": 404,
    "url": "/base-name/cat",
  },
  "notFoundUrl": "/cat",
  "params": Object {
    "foo": "bar",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/NOT_FOUND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params, path): 14 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params, path): 14 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params, path): 14 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/cat",
        "search": "",
        "state": Object {},
        "url": "/cat",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/cat",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "SCENE/NOT_FOUND",
    "universal": false,
    "url": "/base-name/cat",
  },
  "title": "SCENE/NOT_FOUND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.notFound(params, path): 14 - title 1`] = `"SCENE/NOT_FOUND"`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 15 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 15 - history_index 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 15 - response 1`] = `
Object {
  "basename": "/base-name",
  "payload": "foo",
  "type": "SCENE/NOT_FOUND_COMPLETE",
}
`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 15 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 15 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 15 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/NOT_FOUND_COMPLETE - \\"foo\\"",
}
`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 15 - title 1`] = `"FIRST"`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "/base-name",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - history_index 1`] = `1`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/SECOND",
    "universal": false,
    "url": "/base-name/second",
  },
  "title": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - title 1`] = `"SCENE/SECOND"`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - history_index 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - response 1`] = `
Object {
  "basename": "/base-name",
  "type": "WRONG",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "WRONG",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - title 1`] = `"FIRST"`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "/base-name",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - history_index 1`] = `1`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/second",
  },
  "params": Object {
    "foo": "bar",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/SECOND",
    "universal": false,
    "url": "/base-name/second",
  },
  "title": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - title 1`] = `"SCENE/SECOND"`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "/base-name",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - history_index 1`] = `1`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/second",
  },
  "params": Object {
    "foo": "bar",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/SECOND",
    "universal": false,
    "url": "/base-name/second",
  },
  "title": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - title 1`] = `"SCENE/SECOND"`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "/base-name",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - history_index 1`] = `1`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/second",
  },
  "params": Object {
    "testReq": "FIRST",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "testReq": "FIRST",
    },
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/SECOND",
    "universal": false,
    "url": "/base-name/second",
  },
  "title": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - title 1`] = `"SCENE/SECOND"`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - history_index 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - response 1`] = `
Object {
  "basename": "/base-name",
  "payload": Object {
    "foo": "bar",
  },
  "type": "SCENE/SECOND_COMPLETE",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/SECOND_COMPLETE - {\\"foo\\":\\"bar\\"}",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - title 1`] = `"FIRST"`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - history_index 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - response 1`] = `
Object {
  "basename": "/base-name",
  "payload": Object {
    "foo": "bar",
  },
  "type": "SCENE/THIRD_COMPLETE",
}
`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/THIRD_COMPLETE - {\\"foo\\":\\"bar\\"}",
}
`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - title 1`] = `"FIRST"`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - history_index 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - response 1`] = `
Object {
  "basename": "/base-name",
  "error": [Error: fail],
  "type": "SCENE/THIRD_ERROR",
}
`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "error": [Error: fail],
    "errorType": "SCENE/THIRD_ERROR",
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/THIRD_ERROR",
}
`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - title 1`] = `"FIRST"`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - history_index 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - response 1`] = `
Object {
  "basename": "/base-name",
  "params": Object {
    "foo": "bar",
  },
  "type": "SCENE/PLAIN",
}
`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/PLAIN",
}
`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - title 1`] = `"SCENE/PLAIN"`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "/base-name",
    "hash": "",
    "key": "345678",
    "pathname": "/third",
    "search": "",
    "state": Object {},
    "url": "/third",
  },
]
`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - history_index 1`] = `1`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/third",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/third",
  },
  "params": Object {
    "foo": "baz",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/THIRD",
}
`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "foo": "baz",
    },
    "pathname": "/third",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/THIRD",
    "universal": false,
    "url": "/base-name/third",
  },
  "title": "SCENE/THIRD",
}
`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - title 1`] = `"SCENE/THIRD"`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "/base-name",
    "hash": "",
    "key": "345678",
    "pathname": "/fourth",
    "search": "",
    "state": Object {},
    "url": "/fourth",
  },
]
`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - history_index 1`] = `1`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/fourth",
        "search": "",
        "state": Object {},
        "url": "/fourth",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/fourth",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/fourth",
  },
  "params": Object {
    "foo": "baz",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/FOURTH",
}
`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "/base-name",
        "hash": "",
        "key": "345678",
        "pathname": "/fourth",
        "search": "",
        "state": Object {},
        "url": "/fourth",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "foo": "baz",
    },
    "pathname": "/fourth",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/FOURTH",
    "universal": false,
    "url": "/base-name/fourth",
  },
  "title": "SCENE/FOURTH",
}
`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - title 1`] = `"SCENE/FOURTH"`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - history_index 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - response 1`] = `
Object {
  "basename": "/base-name",
  "error": Object {
    "foo": "bar",
  },
  "type": "SCENE/SECOND_ERROR",
}
`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "error": Object {
      "foo": "bar",
    },
    "errorType": "SCENE/SECOND_ERROR",
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/SECOND_ERROR",
}
`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - title 1`] = `"FIRST"`;
